--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-あとでかく
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Taichi Uchida - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        nav ul {
+            padding: 0;
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            background: #444;
+            margin: 0;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+        }
+        .container {
+            padding: 2rem;
+            max-width: 800px;
+            margin: auto;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 1rem 0;
+            background: #333;
+            color: #fff;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        a {
+            color: #007BFF;
+        }
+        a:hover {
+            color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Taichi Uchida</h1>
+        <p>Welcome to my personal website!</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Taichi Uchida, a student at Kyoto University studying aerospace engineering. I have a passion for satellite control, mission design, and robotics for space exploration.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Metagenomics Analysis</strong>: Researching microbial communities in Savannah River Site sediments.</li>
+                <li><strong>Robotic Arm Control</strong>: Upcoming internship at DFKI focusing on 7-DOF robotic arms for spacecraft capture.</li>
+                <li><strong>Sustainable Tourism Project</strong>: Organized SDGs-focused initiatives to reduce food waste and support local tourism.</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>If you'd like to connect, feel free to reach out via <a href="mailto:taichi.uchida@example.com">email</a> or check out my <a href="https://github.com/yourusername">GitHub</a>.</p>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2024 Taichi Uchida. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
