--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>If you'd like to connect, feel free to reach out via <a href="mailto:taichi.uchida@example.com">email</a> or check out my <a href="https://github.com/yourusername">GitHub</a>.</p>
+            <p>If you'd like to connect, feel free to reach out via <a href="mailto:taichi.uchida.official@gmail.com">email</a> or check out my <a href="https://github.com/taichi-u">GitHub</a>.</p>
         </section>
     </div>
     <footer>
