--- a/index.html
+++ b/index.html
@@ -4,61 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taichi Uchida - Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav ul {
-            padding: 0;
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            background: #444;
-            margin: 0;
-        }
-        nav ul li {
-            margin: 0 15px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #fff;
-            font-weight: bold;
-        }
-        .container {
-            padding: 2rem;
-            max-width: 800px;
-            margin: auto;
-            background: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #333;
-            color: #fff;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        a {
-            color: #007BFF;
-        }
-        a:hover {
-            color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -87,7 +33,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>If you'd like to connect, feel free to reach out via <a href="mailto:taichi.uchida.official@gmail.com">email</a> or check out my <a href="https://github.com/taichi-u">GitHub</a>.</p>
+            <p>If you'd like to connect, feel free to reach out via <a href="mailto:taichi.uchida@example.com">email</a> or check out my <a href="https://github.com/yourusername">GitHub</a>.</p>
         </section>
     </div>
     <footer>
@@ -95,4 +41,3 @@
     </footer>
 </body>
 </html>
-
