add social media link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="stat-item">
                             <div class="stat-icon"><i class="fa-solid fa-flask"></i></div>
                             <div class="stat-info">
-                                <h3>3+ Years</h3>
+                                <h3>5+ Years</h3>
                                 <span>Research Experience</span>
                             </div>
                         </div>
@@ -85,14 +85,14 @@
                     <div class="timeline-content">
                         <h4>Kyoto University</h4>
                         <p>Aeronautics and Astronautics Course, Undergraduate School of Engineering Science</p>
-                        <span class="timeline-status">Second year in Undergraduate School</span>
+                        <span class="timeline-status">Third year in Undergraduate School</span>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2020 - 2023</div>
                     <div class="timeline-content">
                         <h4>Seiko Gakuin High School</h4>
-                        <p>Kanagawa, Japan</p>
+                        <p>Yokohama, Kanagawa, Japan</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -106,7 +106,7 @@
                     <div class="timeline-date">2017 - 2018</div>
                     <div class="timeline-content">
                         <h4>Seiko Gakuin Junior High School</h4>
-                        <p>Kanagawa, Japan</p>
+                        <p>Yokohama, Kanagawa, Japan</p>
                     </div>
                 </div>
             </div>
@@ -162,6 +162,8 @@
                         <span class="skill-tag">MATLAB</span>
                         <span class="skill-tag">Arduino</span>
                         <span class="skill-tag">Raspberry Pi</span>
+                        <span class="skill-tag">Github</span>
+                        <span class="skill-tag">Natural Language Process(NLP)</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -170,7 +172,8 @@
                         <span class="skill-tag">PCR</span>
                         <span class="skill-tag">3 years wet lab experience</span>
                         <span class="skill-tag">PhyML</span>
-                        <span class="skill-tag">Sequence Analysis</span>
+                        <span class="skill-tag">Metagenomic Analysis</span>
+                        <span class="skill-tag">Drake(Robotics Simulation)</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -178,6 +181,7 @@
                     <div class="skill-tags">
                         <span class="skill-tag">Japanese (Native)</span>
                         <span class="skill-tag">English (Proficient)</span>
+                        <span class="skill-tag">Russian (Research object)</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -587,8 +591,8 @@
     <footer>
         <div class="social-links">
             <a href="https://github.com/taichi-u" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-link" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="social-link" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/taichi-uchida-592b70304/" class="social-link" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://x.com/Ukulele_run" class="social-link" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
         <p>&copy; 2025 Taichi Uchida. All rights reserved.</p>
     </footer>
