update the working exp.

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                     </div>
                     <div class="hobby-item">
                         <div class="hobby-icon"><i class="fas fa-water"></i></div>
-                        <h4>Diving</h4>
+                        <h4>Diving </h4>
                     </div>
                     <div class="hobby-item">
                         <div class="hobby-icon"><i class="fas fa-plane-departure"></i></div>
-                        <h4>International Travel</h4>
+                        <h4>Travel Abroad</h4>
                     </div>
                 </div>
             </div>
@@ -231,23 +231,37 @@
                     <h3 class="section-subtitle"><i class="fas fa-briefcase"></i> Work Experience</h3>
                     <div class="timeline work-timeline">
                         <div class="timeline-item">
+                            <div class="timeline-date">2025 - Present</div>
+                            <div class="timeline-content">
+                                <h4>NLP enginner intern @"Tleez Inc."</h4>
+                                <p>Working as a NLP Enginner internship for a startup company</p>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
                             <div class="timeline-date">2023 - Present</div>
                             <div class="timeline-content">
-                                <h4>Private Tutor</h4>
-                                <p>Academic tutor for high school and university level students</p>
+                                <h4>Private Tutor @"学習塾鉄緑会"</h4>
+                                <p>Mathematics tutor for high school and university level students</p>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-date">2025 - Present</div>
+                            <div class="timeline-content">
+                                <h4>Kitchen Staff @Japanese restaurant</h4>
+                                <p>Temporary kitchen staff at a Japanese traditional restaurant</p>
                             </div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-date">2023</div>
                             <div class="timeline-content">
                                 <h4>Bakery Staff</h4>
-                                <p>Temporary position at a local bakery</p>
+                                <p>Temporary kitchen staff at a local bakery</p>
                             </div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-date">2023</div>
                             <div class="timeline-content">
-                                <h4>Dotour Coffee Shop</h4>
+                                <h4>Coffee Shop Clerk @"Dotour Inc."</h4>
                                 <p>Customer service and barista responsibilities</p>
                             </div>
                         </div>
