--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                         <h4>TBSラジオ High School A go go</h4>
                         <p class="media-date">November 2021</p>
                         <p>11/1, 11/8 両日出演</p>
-                        <a href="https://www.tbsradio.jp/articles/detail/?id=46518" class="media-link" target="_blank">Listen to Episode <i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://www.tbsradio.jp/articles/detail/?id=46518" class="media-link" target="_blank">View Article <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 
@@ -688,6 +688,15 @@
                         <p class="media-date">March 2023</p>
                         <p>23年3月24日号 インタビュー掲載</p>
                         <span class="media-note">Print Publication</span>
+                    </div>
+                </div>
+
+                <div class="media-card">
+                    <div class="media-content">
+                        <h4>宇宙フリーマガジンTELSTAR</h4>
+                        <p class="media-date">May 2022</p>
+                        <p>インタビュー記事寄稿</p>
+                        <a href="https://spacemgz-telstar.com/article/feature/a332" class="media-link" target="_blank">View Article <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
