--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             <div class="popup-info">
                 <p><strong>Period:</strong> 4th Aug – 23rd Sep 2024</p>
                 <p><strong>Lab:</strong> Dr. DiChristina Lab, School of Biological Science</p>
-                <p><strong>Status:</strong> Fully Funded</p>
+                <p><strong>Status:</strong> Fully Funded by Nakatani fundation, US Deparatment of Energy</p>
             </div>
             <p>Conducted metagenomic analysis towards the stabilization of heavy metal contaminants. Utilized R, Linux, and Python for in silico research, applying computational methods to analyze bacterial communities involved in heavy metal remediation.</p>
             <p>Developed analysis pipelines for processing large sequencing datasets and identifying microbial communities with potential for bioremediation applications.</p>
@@ -783,6 +783,7 @@
                 <p><strong>Period:</strong> December 2020 – March 2023</p>
                 <p><strong>Lab:</strong> Dr. Fujishima Lab, Earth Life Science Institute</p>
                 <p><strong>Funding:</strong> Japan Science and Technology Agency (JST), The Government of Japan</p>
+                <p><strong>Status:</strong> Fully Funded</p>
             </div>
             <p>Conducted three years of wet lab research on "Isolation and identification of Extreme Halophiles in world-wide rock salts with a specific carbon source". This extensive project involved collecting and analyzing halophilic archaea from diverse global sources.</p>
             <p>Utilized PCR, Electrophoresis, Sequence analysis, and constructed phylogenetic trees using PhyML (analysis software). The research contributed to understanding extremophiles and their implications for astrobiology.</p>
@@ -795,7 +796,8 @@
             <h4>Individual Research, Seiko Gakuin High School</h4>
             <div class="popup-info">
                 <p><strong>Period:</strong> August 2020 – August 2021</p>
-                <p><strong>Funding:</strong> Seiko Gakuin</p>
+                <p><strong>Funding:</strong> Seiko Gakuin SSH programm supoorted by Japan Science and Technology Agency (JST)</p>
+                <p><strong>Status:</strong> Fully Funded</p>
             </div>
             <p>Developed a new method of artificial gravity generation and conducted empirical evaluations of its effectiveness. Utilized Arduino microcontrollers to design and implement force sensors for precise measurement and evaluation of the prototype system.</p>
             <p>This research addressed one of the fundamental challenges of long-term space habitation and received recognition at the Super Science High School Research Symposium.</p>
@@ -808,6 +810,7 @@
             <h4>Meteorite Research Group, Seiko Gakuin High School</h4>
             <div class="popup-info">
                 <p><strong>Period:</strong> August 2021 – February 2022</p>
+                <p><strong>Status:</strong> Fully Funded</p>
             </div>
             <p>Participated in research utilizing electron microscopy to analyze meteorite samples. This collaborative project involved working with faculty from several universities in Japan and a partner high school in Britain.</p>
             <p>Gained experience in advanced analytical techniques and international scientific collaboration, contributing to our understanding of extraterrestrial materials and their composition.</p>
@@ -821,6 +824,7 @@
             <div class="popup-info">
                 <p><strong>Period:</strong> February 2025 – Present</p>
                 <p><strong>Lab:</strong> Robotics Innovation Center, German Research Center for Artificial Intelligence</p>
+                <p><strong>Status:</strong> Fully Funded</p>
             </div>
             <p>Conducting research on advanced control algorithms for 7-DOF robotic arms designed for space applications. This work focuses on developing precise control systems essential for critical space operations including spacecraft capture, space debris removal, and on-orbit servicing.</p>
             <p>The research contributes to enhancing the autonomy and reliability of robotic systems in low Earth orbit and beyond, addressing key challenges in space robotics and supporting sustainable space utilization.</p>
