update 29th Nov 2025 2

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#media">Media</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="index-ja.html" class="lang-switch">日本語</a></li>
             </ul>
         </nav>
     </header>
